@@ -1,17 +1,18 @@
 #include <config.h>
 
 #include <string.h>
+#include "ServerSocket.hpp"
 #include "Client.hpp"
 
-Client::Client()
+Client::Client(ServerSocket* newserver)
 		: tcpsocket(0), headerincomplete(false),
 		  messageincomplete(0), udpenabled(false), tempoffset(0),
-		  id(0)
+		  id(0), server(newserver)
 {
 	memset(&udpaddress, 0, sizeof(IPaddress));
 }
 
 Client::~Client()
 {
-	SDLNet_TCP_Close(tcpsocket);
+	server->closeConnection(this);
 }
