@@ -9,6 +9,8 @@
 -added possibility to switch windows/fullscreen mode on ALT+ENTER
 -fixed some smaller bugs in Splitpath and FileUtil
 -added an fps counter to the info window
+-lots of small fixes in the network code
+-applied a patch from Raphael Bosshard which fixes a few warnings
 
 7-Sep-2003 by Matze Braun
 -removed NetMessageLog class (because it only contained shit ;-)
